--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta name="description" content="WebPortfolio mit den Arbeiten von Piclain.">
     <meta name="keywords" content="Noé Plain, Fotografie, Illustration">
     <link rel="icon" type="image/x-icon" href="./pictures/njp_logo_gross.png">
-    <title>Piclain – Home</title>
+    <title>Noé Plain – Home</title>
 </head>
 
 <body>
